docs: update project roadmap to mark docs site and OpenAPI spec as complete

--- a/api-reference/authenticated/latest.mdx
+++ b/api-reference/authenticated/latest.mdx
@@ -182,7 +182,7 @@ All rates are quoted as **AUD to foreign currency**:
     - Used by economists and analysts for AUD strength analysis
   </Accordion>
   
-  <Accordion title="Special Drawing Rights (SDR)" icon="building-columns">
+  <Accordion title="Special Drawing Rights (SDR)" icon="university">
     SDRs are international reserve assets created by the International Monetary Fund.
     
     - Basket currency including USD, EUR, CNY, JPY, GBP
@@ -515,7 +515,7 @@ echo "Data from: " . $rates['date'] . "\n";
   </Card>
   <Card
     title="Historical Rates"
-    icon="clock-rotate-left"
+    icon="history"
     href="/api-reference/authenticated/historical"
   >
     Access rates from any date since 2018
