--- a/authentication.mdx
+++ b/authentication.mdx
@@ -362,7 +362,7 @@ test_auth()
   </Card>
   <Card
     title="Best Practices"
-    icon="shield-check"
+    icon="shield"
     href="/guides/best-practices"
   >
     Learn security and performance tips
