--- a/changelog.mdx
+++ b/changelog.mdx
@@ -195,7 +195,7 @@ Since this is the initial release, no migrations are required. For users plannin
 ### From Other Exchange Rate APIs
 
 <AccordionGroup>
-  <Accordion title="From Fixer.io" icon="arrows-rotate">
+  <Accordion title="From Fixer.io" icon="rotate">
     **Key Differences:**
     - Base currency is AUD (not EUR)
     - Australian focus with RBA official data
@@ -207,7 +207,7 @@ Since this is the initial release, no migrations are required. For users plannin
     3. Update rate calculations for AUD base currency
   </Accordion>
   
-  <Accordion title="From ExchangeRate-API.com" icon="arrows-rotate">
+  <Accordion title="From ExchangeRate-API.com" icon="rotate">
     **Key Differences:**
     - Official RBA data source
     - Required authentication for production use
