--- a/introduction.mdx
+++ b/introduction.mdx
@@ -33,7 +33,7 @@ The Exchange Rates API is a developer-focused data service providing **official 
   </Card>
   <Card
     title="Historical Data"
-    icon="clock-rotate-left"
+    icon="history"
     href="/api-reference/authenticated/timeseries"
   >
     Complete history from 2018 onwards with 30,000+ data points
