--- a/legal/legal.mdx
+++ b/legal/legal.mdx
@@ -26,7 +26,7 @@ Exchange Rates API provides access to Reserve Bank of Australia (RBA) exchange r
 
 ### 3. Account Registration and API Keys
 
-<Card title="Account Requirements" icon="user-check">
+<Card title="Account Requirements" icon="user">
 - You must provide accurate, complete information during registration
 - You are responsible for maintaining the confidentiality of your API keys
 - You must notify us immediately of any unauthorized use of your account
@@ -50,7 +50,7 @@ Exchange Rates API provides access to Reserve Bank of Australia (RBA) exchange r
 
 ### 5. Data Usage and Attribution
 
-<Card title="RBA Data Attribution" icon="quote-right">
+<Card title="RBA Data Attribution" icon="quote">
 **Required:** You must include appropriate attribution to the Reserve Bank of Australia in any application, report, or system using our API data.
 
 **Suggested format:** "Exchange rate data sourced from the Reserve Bank of Australia via Exchange Rates API"
@@ -178,7 +178,7 @@ Address: [TBD]
 
 ### 3. Information Sharing
 
-<Card title="We DO NOT Sell Personal Data" icon="shield-check">
+<Card title="We DO NOT Sell Personal Data" icon="shield">
 We never sell, rent, or trade your personal information to third parties for marketing purposes.
 </Card>
 
@@ -341,7 +341,7 @@ Upon termination:
 
 ### Permitted Activities
 
- **Encouraged Uses:**
+**Encouraged Uses:**
 - Financial calculations and currency conversion
 - Integration into business applications
 - Compliance and regulatory reporting
@@ -351,7 +351,7 @@ Upon termination:
 
 ### Prohibited Activities
 
-L **Strictly Forbidden:**
+**Strictly Forbidden:**
 - Reselling raw API data without authorization
 - Creating competing exchange rate services
 - Attempting to reverse engineer our systems
@@ -410,7 +410,7 @@ Include: Account details, description of violation, evidence
 
 **Calculation Method:**
 ```
-Uptime % = (Total Minutes - Downtime Minutes) / Total Minutes × 100
+Uptime % = (Total Minutes - Downtime Minutes) / Total Minutes Ã— 100
 ```
 
 **Monitoring:** External monitoring from multiple global locations
