docs: remove marketing content and simplify troubleshooting guide

--- a/guides/best-practices.mdx
+++ b/guides/best-practices.mdx
@@ -57,6 +57,8 @@ app.get('/api/exchange-rates', async (req, res) => {
 });
 ```
 
+and always add .env files to .gitignore.
+
 ### Key Rotation
 Implement regular key rotation for enhanced security:
 
