--- a/legal/legal.mdx
+++ b/legal/legal.mdx
@@ -58,14 +58,8 @@ Exchange Rates API provides access to Reserve Bank of Australia (RBA) exchange r
 
 ### 6. Subscription Plans and Billing
 
-**Plan Types:**
-- **Free:** 50 requests/day, latest rates only
-- **Starter:** $19 AUD/month, 1,000 requests/day, 90-day history
-- **Professional:** $79 AUD/month, 10,000 requests/day, full history
-- **Business:** $249 AUD/month, unlimited requests, premium features
-
 **Billing Terms:**
-- All prices in Australian Dollars (AUD) excluding GST
+- All prices in Australian Dollars (AUD) including GST
 - Monthly subscriptions bill in advance
 - No refunds for unused quota or partial periods
 - Automatic renewal unless cancelled
@@ -94,8 +88,6 @@ Exchange Rates API provides access to Reserve Bank of Australia (RBA) exchange r
 **No Warranty:** Exchange rate data is provided "as is" without warranties of any kind.
 
 **Data Source:** We source data from the RBA but are not responsible for RBA data accuracy, completeness, or timeliness.
-
-**No Financial Advice:** This service does not provide financial, investment, or trading advice.
 </Card>
 
 ### 9. Limitation of Liability
@@ -212,7 +204,6 @@ We never sell, rent, or trade your personal information to third parties for mar
 **Access and Control:**
 - View your personal data in the dashboard
 - Update account information anytime
-- Download your usage data
 - Delete your account and data
 - Opt out of marketing communications
 
