--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -7,7 +7,7 @@ description: 'Get up and running with the Exchange Rates API in under 2 minutes'
 
 <Steps>
   <Step title="Sign Up">
-    Visit [app.exchangeratesapi.com.au](https://app.exchangeratesapi.com.au) and sign up for an API key using your email address.
+    Visit [app.exchangeratesapi.com.au](https://app.exchangeratesapi.com.au) and sign up using your email address.
     
     <Note>No credit card required for the free tier (50 requests/day)</Note>
   </Step>
