--- a/support.mdx
+++ b/support.mdx
@@ -8,158 +8,37 @@ description: 'Get help with the Exchange Rates API - support channels, response 
 ### Email Support
 **[support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au)**
 
-Our primary support channel for:
-- Technical questions and integration help
-- Account and billing inquiries
-- Bug reports and feature requests
-- API key issues and quota management
+**Response Times:**
+- **Free**: Best effort (2-5 business days)
+- **Starter**: 48 hours
+- **Professional**: 24 hours  
+- **Business**: 4 hours
+- **Enterprise**: 4 hours + phone support
 
-**Response Times by Plan:**
-- **Free**: Best effort (typically 2-5 business days)
-- **Starter**: 48 hours during business hours
-- **Professional**: 24 hours during business hours  
-- **Business**: 4 hours during business hours
-- **Enterprise**: 4 hours with phone escalation available
-
-### Self-Service Resources
+### Self-Service
 
 <CardGroup cols={2}>
-  <Card
-    title="API Status"
-    icon="wifi"
-    href="https://status.exchangeratesapi.com.au"
-  >
-    Check real-time API status and outage information
+  <Card title="API Status" icon="wifi" href="https://status.exchangeratesapi.com.au">
+    Real-time API status
   </Card>
-  <Card
-    title="Dashboard"
-    icon="chart-line"
-    href="https://app.exchangeratesapi.com.au"
-  >
-    Monitor usage, manage API keys, and view billing
-  </Card>
-  <Card
-    title="Documentation"
-    icon="book"
-    href="/introduction"
-  >
-    Complete API reference and integration guides
-  </Card>
-  <Card
-    title="Best Practices"
-    icon="shield"
-    href="/guides/best-practices"
-  >
-    Performance optimization and error handling
+  <Card title="Dashboard" icon="chart-line" href="https://app.exchangeratesapi.com.au">
+    Usage and billing
   </Card>
 </CardGroup>
+
+### When Contacting Support
+
+Include:
+- Your email address and plan
+- Exact error messages and HTTP codes
+- Request ID from X-Request-Id header
+- Sample cURL command (with key redacted)
 
 ## Business Hours
 
 **Australian Eastern Time (AEST/AEDT)**
-- **Monday - Friday**: 9:00 AM - 5:00 PM
-- **Weekends**: Emergency support only for Business/Enterprise plans
-- **Public Holidays**: Limited support (Australia and major international holidays)
-
-<Note>
-We provide support during Australian business hours as our team is based in Australia and our primary data source (RBA) operates on Australian schedules.
-</Note>
-
-
-
-## Enterprise Support
-
-### Business & Enterprise Plans
-
-**Enhanced Support Includes:**
-- Phone support: Direct line during business hours
-- Priority email: 4-hour response time
-- Technical consultation: Architecture and integration advice
-- Custom reporting: Usage analytics and billing insights
-- API customization: Custom endpoints and data formats
-
-### Professional Services
-
-**Available Services:**
-- Integration consulting: Architecture review and best practices
-- Custom development: Bespoke APIs and data processing
-- Training workshops: Team education on currency data and APIs
-- SLA customization: Tailored uptime and response guarantees
-
-Contact [enterprise@exchangeratesapi.com.au](mailto:enterprise@exchangeratesapi.com.au) for:
-- Custom contracts and MSAs
-- Volume pricing discussions
-- Technical architecture reviews
-- Compliance and security consultations
-
-## Community Resources
-
-### Knowledge Base
-
-**Common Integration Patterns:**
-- Currency conversion calculators
-- Historical analysis dashboards
-- E-commerce integration guides
-- Mobile app considerations
-
-### Example Code Repository
-
-We maintain example implementations in popular frameworks:
-- React/Next.js: Frontend integration patterns
-- Node.js/Express: Backend proxy implementations
-- Python/Django: Server-side currency handling
-- PHP/Laravel: E-commerce integration examples
-
-<Note>
-Official code examples and SDKs are coming soon. Current examples are community-maintained and available in our documentation.
-</Note>
-
-## Service Level Agreements
-
-### Uptime Commitments
-
-| Plan | Uptime SLA | Monitoring | Credits |
-|------|------------|------------|---------|
-| Free | Best effort | Public status page | None |
-| Starter | 99.0% | Email alerts | None |
-| Professional | 99.9% | SMS + Email | Account credit |
-| Business | 99.9% | Phone + SMS + Email | Account credit |
-| Enterprise | 99.99%* | Custom alerting | Contract terms |
-
-*Custom SLAs available for Enterprise plans
-
-### Response Time Targets
-
-- Australia/NZ: <50ms average, <100ms p95
-- Asia-Pacific: <100ms average, <200ms p95
-- Global: <200ms average, <400ms p95
-
-### Maintenance Windows
-
-- Scheduled maintenance: Announced 48 hours in advance
-- Emergency maintenance: Immediate notification via status page
-- Preferred window: Saturday 2:00-4:00 AM AEST (minimal business impact)
+- Monday-Friday: 9 AM - 5 PM
 
 ---
 
-## Contact Information
-
-### Support Channels Summary
-
-| Channel | Use Case | Response Time | Availability |
-|---------|----------|---------------|--------------|
-| Email | All inquiries | Plan-dependent | 24/7 submission |
-| Status Page | Outage info | Real-time | 24/7 |
-| Dashboard | Self-service | Immediate | 24/7 |
-| Phone | Business/Enterprise | 4 hours | Business hours |
-
-### Mailing Address
-
-**Exchange Rates API**  
-Support Department  
-Australia  
-Email: [support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au)
-
----
-
-*Need immediate assistance? Check our status page first, then email [support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au) with detailed information about your issue.*
+*Check [status page](https://status.exchangeratesapi.com.au) first, then email [support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au)*
