docs: add Python, PHP and cURL SDK pages and simplify marketing copy

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Exchange Rates API
-description: 'Welcome to the Exchange Rates API - Official Reserve Bank of Australia exchange rate data for programmatic access through REST API endpoints'
+description: 'Welcome to the Exchange Rates API - programmatic access to Official Reserve Bank of Australia exchange rate data through REST API endpoints'
 ---
 
 <img
@@ -21,7 +21,7 @@ The Exchange Rates API is a developer-friendly data service providing **official
     title="Official RBA Data"
     icon="school"
   >
-    Direct from the Reserve Bank of Australia, updated daily at 4:00 PM AEST
+    Direct from the Reserve Bank of Australia, updated daily
   </Card>
   <Card
     title="Simple REST API"
@@ -36,7 +36,7 @@ The Exchange Rates API is a developer-friendly data service providing **official
     Complete history from 2018 onwards with 30,000+ data points
   </Card>
   <Card
-    title="Generous Free Tier"
+    title="Free Tier"
     icon="gift"
   >
     50 requests per day on the free plan, no credit card required
